# neargate

./: Cargo.toml
neargate_client/: Cargo.toml
neargate_client/src/: main.rs
neargate_lib/: Cargo.toml
neargate_lib/src/: cell.rs  damage.rs  item.rs  job.rs  spell.rs  unit.rs
neargate_lib/src/item/: item_rarity.rs
neargate_server/: Cargo.toml
neargate_server/src/: main.rs
src/: aura.rs  cell.rs  damage.rs  effect.rs  game.rs  item.rs  job.rs  lib.rs  main.rs  spell.rs  test.rs  unit.rs
src/game/: game_state.rs
src/item/: consumable.rs  equippable.rs  item_quality.rs
src/item/equippable/: equippable_slot.rs
src/job/: job_type.rs
src/spell/: spell_effect.rs  spell_type.rs
