[package]
name = "neargate_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "neargate_client"
path = "src/main.rs"

[dependencies]
neargate_lib = { path = "../neargate_lib" }
bevy = "0.15.0"
bevy_egui = "0.31.1"
bevy_http_client = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.216"